# sandol-auth-relay

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/config/: clients.json  clients.json.example  config.py
app/routers/: __init__.py  auth.py  auth_relay.py  webhook.py
app/schemas/: __init__.py  auth.py
app/utils/: __init__.py  client_resolver.py  clients.py  kakao_webhook.py  kc_client.py  oidc_helpers.py  redirects.py  security.py  storage.py  url_validation.py
docs/: chatbot-integration-guide.md  chatbot-user-context-integration.md
temp_web_service/: .env.example  main.py
test_server/: .env  test.py
tests/routers/: test_auth_flow.py  test_issue_login_link.py
tests/utils/: test_clients.py  test_redirects.py
